# GMACS_tpl-cpp_code

./: .gitignore  .nojekyll  CMakeLists.txt  Doxyfile  Makefile  README.md  gmacsbase.TPL  gmacsbase20241107WTS.TPL  gmacsbase_20240326AEP.TPL  gmacsbase_20240326AndreVersionPlusPwrLawGrowth.TPL  gmacsbase_20240328AEPFinal.TPL  gmacsbase_20240329AndreVersion.TPL  gmacsbase_20240403AndreVersion.TPL  gmacsbase_20240404aAEP.TPL  gmacsbase_20240405AEP.TPL  gmacsbase_20240422AEP_PlusNewEIsFormat.TPL  gmacsbase_20240627AEP.TPL  gmacsbase_20240701AEP.TPL  gmacsbase_20250114AEP.TPL  gmacsbase_AndreVersion20240318.TPL  gmacsbase_AndreVersion20240321.TPL  index.html  make_win.txt  personal.TPL  q01_Intro.html  q02-File-organization.html  q02a-gmacs-dat-file.html  q02b-model-dat-file.html  q02b-model-dat-file.qmd  q02c-model-ctl-file.html  q02d-model-prj-file.html  q03-GMACS-flags.html  robots.txt  search.json  sitemap.xml  tpl2dox.sh
include/: selex.hpp
quarto/: Note_On_Rendering.txt  _quarto.yml  q01_Intro.qmd  q02-File-organization.qmd  q02a-gmacs-dat-file.qmd  q02b-model-dat-file.qmd  q02c-model-ctl-file.qmd  q02d-model-prj-file.qmd  q03-GMACS-flags.qmd
site_libs/bootstrap/: bootstrap.min.css
testing/: .gitignore
testing/Punt_TestingFramework20250115/: TestUpdate.R  runall.bbb  runmodel.bbb
testing/input_files/AIGKC_202401/: EAG_23_1b.ctl  EAG_23_1b.prj  EAG_23_1b_M09.ctl  EAG_23_1b_M09.prj  gmacs.par_old  gmacs.pin
testing/input_files/AIGKC_EAG22_1e2/: Gmacs9cEAG22_1e2CatchNo_complete.ctl  Gmacs9cEAG22_1e2CatchNo_complete.prj
testing/input_files/AIGKC_EAG_20240327/: Gmacs9cEAG22_1e2CatchNo_complete.ctl
testing/input_files/AIGKC_EAG_20240723DirichMulti/: EAG_25_1.ctl  EAG_25_1.prj  Gmacsall.out
testing/input_files/AIGKC_EAG_20250114/: EAG_23_1c.ctl  EAG_23_1c.prj  Gmacsall.out
testing/input_files/AIGKC_WAG_20250114/: Gmacsall.out  WAG_23_1c.ctl
testing/input_files/BBRKC_202401/: bbrkc21.prj  bbrkc211.ctl  bbrkc_21_1_M09.ctl  bbrkc_21_1_M09.prj  gmacs.par_old  gmacs.pin
testing/input_files/BBRKC_20240327/: bbrkc211.ctl
testing/input_files/BBRKC_20240731/: Gmacsall_v14.out  Gmacsall_v16.out
testing/input_files/BBRKC_20250114/: Gmacsall.out  bbrkc230a_sept24_sz1.ctl
testing/input_files/NSRKC_202401/: gmacs.pin  nsrkc23.ctl  nsrkc23.prj
testing/input_files/NSRKC_20240327/: nsrkc23.ctl
testing/input_files/SMBKC_202401/: gmacs.pin  sm22.ctl  sm22.prj  sm_22_M09.ctl  sm_22_M09.prj
testing/input_files/SMBKC_20240327/: sm22.ctl
testing/input_files/SMBKC_20240528/: sm24.ctl  sm24.prj  sm24_updated.ctl
testing/input_files/SMBKC_2024Asmt/: sm24.ctl
testing/input_files/SMBKC_20250114/: Gmacsall.out  gmacs.par
testing/input_files/SnowCrab_202401/: gmacs.pin  snow.ctl  snow_M09.ctl  snow_M09.prj
testing/input_files/SnowCrab_20240304/: snow.ctl
testing/input_files/SnowCrab_20240318/: snow.ctl  snow.prj
testing/input_files/SnowCrab_20240321/: snow.ctl
testing/input_files/SnowCrab_20240326/: snow.ctl
testing/input_files/SnowCrab_20240327/: snow.ctl
testing/input_files/SnowCrab_20240328/: snow.ctl
testing/input_files/TannerCrab_20240627/: TannerCrab_24_06b.ctl
testing/input_files/TannerCrab_MalesOnlyA/: gmacs.pin  tanner.ctl  tanner_23_M09.ctl  tanner_23_M09.prj  (+1 more)
testing/runs/: runTests.r  zz_run_osx.sh
testing/scripts/: Rewrite_GMACS_input_files.R  f_read_allout.R  readParFile.R  runTests.old.R  runTests.r  runTests1.r  runTests_Report.qmd  zz_run_osx.sh  zz_run_win.bat
tpl_files/: gmacsbase.20250218MV.TPL  gmacsbase.20250331WTS.TPL  gmacsbase_20240404AEP.TPL  gmacsbase_20240422AEP.TPL  gmacsbase_20240516AEP.TPL  gmacsbase_20240520AEP.TPL  gmacsbase_20240520combined.TPL  gmacsbase_20250127WTS.TPL  gmacsbase_20250130AEP.TPL
(+25 files in other folders)
